// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InputDropdown component should render a TextField with error status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--error"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          class="input peer input__align--left input__size--md"
          data-headlessui-state=""
          data-testid="dropdown-input"
          readonly=""
          role="combobox"
          type="select"
          value=""
        />
      </div>
      <svg
        class="dropdown__transform"
        data-state="close"
        height="22"
        role="img"
        viewBox="0 0 14 22"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="m6.535 14.715-5.25-5.25c-.273-.246-.273-.656 0-.93.246-.246.656-.246.93 0L7 13.348l4.785-4.786c.246-.273.656-.273.93 0a.644.644 0 0 1 0 .903l-5.277 5.25a.6.6 0 0 1-.903 0"
          />
        </g>
        <defs>
          <clippath
            id="f43687b6c6d919677eabf8a2c671e282__a"
          >
            <path
              d="M0 0h14v22H0z"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</div>
`;

exports[`InputDropdown component should render a TextField with success status 1`] = `
<div>
  <div
    class="quill-input__container"
  >
    <div
      class="quill-input__wrapper quill-input__wrapper__variant--outline quill-input__wrapper__size--md quill-input__wrapper__status--success"
    >
      <div
        class="quill-input-no-label__wrapper"
      >
        <input
          aria-autocomplete="list"
          aria-expanded="false"
          class="input peer input__align--left input__size--md"
          data-headlessui-state=""
          data-testid="dropdown-input"
          readonly=""
          role="combobox"
          type="select"
          value=""
        />
      </div>
      <svg
        class="dropdown__transform"
        data-state="close"
        height="22"
        role="img"
        viewBox="0 0 14 22"
        width="14"
        xmlns="http://www.w3.org/2000/svg"
      >
        <g>
          <path
            d="m6.535 14.715-5.25-5.25c-.273-.246-.273-.656 0-.93.246-.246.656-.246.93 0L7 13.348l4.785-4.786c.246-.273.656-.273.93 0a.644.644 0 0 1 0 .903l-5.277 5.25a.6.6 0 0 1-.903 0"
          />
        </g>
        <defs>
          <clippath
            id="f43687b6c6d919677eabf8a2c671e282__a"
          >
            <path
              d="M0 0h14v22H0z"
            />
          </clippath>
        </defs>
      </svg>
    </div>
  </div>
</div>
`;
